--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -127,11 +127,14 @@
                         </div>
                     </div>
                     <div class="col-sm-5">
+                        <%= form_tag search_index_path, :method => :get do %>
                         <div class="ui-widget search_box pull-right">
-                            <input id="tags" type="text" placeholder="Search" class="ui-autocomplete-input" autocomplete="off"
-                            style="font-size: 12px;">
-							<i class="fa fa-search" style="margin-top: 10px;font-size: 12px; "></i>
+                                <%= text_field_tag :search,params[:search], :input_html => {id: 'tags', class: 'ui-autocomplete-input', style: 'font-size: 12px;'}%>
+                                <%= button_tag(type: "submit", class: "btn btn-primary btn-small", style: "margin: 0 0;") do %>
+                                <span><i class="fa fa-search" style="margin: 0 0;font-size: 12px; "></i> Search</span>
+                                <% end %>
                         </div>
+                        <% end %>
                     </div>
                 </div>
             </div>
