--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -11,6 +11,7 @@
 
                       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name),:defaults => {:input_html => {:label => false}}) do |f| %>
                           <!--<%= f.error_notification %>-->
+                          <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
 
                               <div class="form-inputs">
                                   <%= f.input_field :username, required: true, autofocus: true, :placeholder => 'User Name' %>
