--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,9 +8,9 @@
 
                 <div class="col-sm-9 padding-right">
 
-                    <!--features_items-->
+                    <!--featured_items-->
                     <div id="prods" class="features_items" data-service="{{$data['prods']}}">
-                        <h2 class="title text-center">Features Items</h2>
+                        <h2 class="title text-center">Featured Items</h2>
                         <!-- navigation holder -->
                         <div class="holder">
                         </div>
@@ -53,7 +53,7 @@
                                 <% end %>
                         </ul>
                     </div>
-                    <!--/features_items-->
+                    <!--/featured_items-->
 
                     <!--category_tab-->
                     <div class="category-tab">
