--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,57 +1,55 @@
 <!--new page for seach page -->
 
-
-    <div class="container">
-        <div class="row">
-            <div class= "col-sm-3">
-                <%= render "share/filter.sidebar"%>
-
-            </div>
-
-            <div class="col-sm-9 padding-right">
-                <div class="seach_items">
-
-                    <!--search_items-->
-
-                    <h2 class="title text-center">Search Items</h2>
-                    <% @products.each do |prod|%>
-                    <div class="col-sm-4">
-                        <div class="product-image-wrapper">
-                            <div class="single-products">
-                                <div class="productinfo text-center">
-                                    <img src="images/shop/product12.jpg" alt="" />
-                                    <h2><%= prod.price%></h2>
-                                    <p><%= prod.name%></p>
-                                    <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                                </div>
-                                <div class="product-overlay">
-                                    <div class="overlay-content">
-                                        <h2><%= prod.price%></h2>
-                                        <p><%= prod.name%></p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="choose">
-                                <ul class="nav nav-pills nav-justified">
-                                    <li><a href="#"><i class="fa fa-plus-square"></i>Add to wishlist</a></li>
-                                    <li><a href="#" class="btn btn-default add-to-cart"><i class="fa fa-plus-square"></i>Add to Cart</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <% end %>
-
-
-                    <ul class="pagination">
-                        <li class="active"><a href="">1</a></li>
-                        <li><a href="">2</a></li>
-                        <li><a href="">3</a></li>
-                        <li><a href="">&raquo;</a></li>
-                    </ul>
-                </div>
-                <!-- /search_items-->
-            </div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-3">
+            <%= render "share/filter.sidebar"%>
 
         </div>
+
+        <div class="col-sm-9 padding-right">
+            <!--search_items-->
+            <h2 class="title text-center">Search Items</h2>
+            <!-- navigation holder -->
+            <div class="holder"></div>
+            <!-- navigation container -->
+            <ul class='itemContainer'>
+                <% @products.each do |prod|%>
+                    <li>
+                        <div class="col-sm-4">
+                            <div class="product-image-wrapper">
+                                <div class="single-products">
+                                    <div class="productinfo text-center">
+                                        <img src="images/shop/product12.jpg" alt="" />
+                                        <h2><%= prod.price%></h2>
+                                        <p>
+                                            <%= prod.name%>
+                                        </p>
+                                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
+                                    </div>
+                                    <div class="product-overlay">
+                                        <div class="overlay-content">
+                                            <h2><%= prod.price%></h2>
+                                            <p>
+                                                <%= prod.name%>
+                                            </p>
+                                            <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="choose">
+                                    <ul class="nav nav-pills nav-justified">
+                                        <li><a href="#"><i class="fa fa-plus-square"></i>Add to wishlist</a></li>
+                                        <li><a href="#" class="btn btn-default add-to-cart"><i class="fa fa-plus-square"></i>Add to Cart</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                <% end %>
+            </ul>
+            <!-- /search_items-->
+        </div>
+
     </div>
+</div>
