--- a/app/views/share/_admin.header.html.erb
+++ b/app/views/share/_admin.header.html.erb
@@ -237,7 +237,7 @@
 											</li>
 
 											<li>
-													<%= link_to '<i class="icon_profile"></i> Logout'.html_safe,:admin_admin%>
+													<%= link_to '<i class="icon_profile"></i> Logout'.html_safe%>
 											</li>
 
 									</ul>
