--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,11 +1,12 @@
-<!-- <div class="col-md-1">
-</div>  -->
+<%= simple_form_for(@prod,:url => admin_product_path,:method => :PATCH,
+        html: {class: 'form-horizontal',:mulitipart => true},:defaults => {:input_html => {:class => 'form-control'}}) do|f|%>
+<div class="row">
+
 
 <div class="col-md-6" style="margin-top:25px">
     <div class="content-box-large ">
 
-        <%= simple_form_for(@prod,:url => admin_products_path,:method => :POST,
-     html: {class: 'form-horizontal',:mulitipart => true},:defaults => {:input_html => {:class => 'form-control'}}) do|f|%>
+        
 
             <!-- {!! Form::open(['url' => 'editProduct', 'method' => 'post']) !!} -->
             <div class="panel-heading col-md-8">
@@ -23,37 +24,96 @@
                 <select name="cat_id" class="form-control">
                      @foreach($cats as $cat) 
                     <option value="{{$cat->name}}" </option>
-                        <!-- @endforeach 
+                        @endforeach 
                 </select> -->
 
                         <br/>
                         <%= f.input :id, :label => 'Product ID:' %>
 
-                            <br/>
-                            <%= f.input :name, :label => 'Product Name' %>
+                        <br/>
+                        <%= f.input :name, :label => 'Product Name' %>
 
-                                <br/>
-                                <%= f.input :brand_name, :label => 'Brand Name:' %>
+                        <br/>
+                        
+                        <%= f.input :brand_name, :label => 'Brand Name:' %>
 
-                                    <br/>
-                                    <%= f.input :cat_name, :label => 'Category' %>
+                        <br/>
 
-                                        <br/>
-                                        <%= f.input :model, :label => 'Sub-Category' %>
+                        <%= f.fields_for :cat_name do |f_cn|%>
+                             <%= f_cn.input :cat_name[:sub], :label => 'Category' %> 
+                        <% end %>
+                        
 
-                                            <br/>
-                                            <%= f.input :price, :label => 'Unit Price:' %>
+                        <br/>
+                        <%= f.input :model, :label => 'Sub-Category' %>
 
-                                                <br/>
-                                                <%= f.input :unit_qTy, :label => 'Unit In Stock:' %>
+                        <br/>
+                        <%= f.input :price, :label => 'Unit Price:' %>
 
-                                                    <br/>
-                                                    <%= f.input :size,  :label => 'Size:' %>
+                        <br/>
+                        <%= f.input :unit_qTy, :label => 'Unit In Stock:' %>
 
-                                                        <br/>
-                                                        <%= f.input :history, :label => 'Details:' %>
+                        <br/>
+                         <!-- <%= f.input :size,  :label => 'Size:' %>  -->
 
-                                                            <!-- <br/>
+                        <br/>
+                         <!-- <%= f.input :history, :label => 'Details:' %>  -->
+                                                           
+                        <br/> New Arrival:
+                        <p class="pull-right">
+                            <input type="checkbox" name="new_arrival" value="1" />
+                            <input type="hidden" name="_token" value="{{ csrf_token() }}"> 
+
+                        <br/>
+
+                        <%= f.button :submit, :label => 'Update product',
+                        :class=> 'btn btn-success pull-right', style: "margin-top:10px" %>               
+                </div>
+
+            </div>
+
+    </div>
+
+</div>
+
+<div class="col-md-4" style="margin-top:25px; margin-left:-4px">
+    <!-- <?php $pId=$ Products[0]->id; $prots = DB::table('products_properties') ->where('pro_id', $pId)->get(); if(count($prots)==0) { } else {?> -->
+    <div class="panel-heading" style="height:120px; background-color:white">
+        <div class="panel-title">
+            Update Proprities
+                 
+   
+            <!-- <input type="text" name="spl_price" class="form-control" border="none" value=""> -->
+            <a href="" class="btn btn-info pull-right" style="margin:-6px; color:#fff">Add more</a>
+        </div>
+
+        <div class="col-sm-12" style="margin-top:100px; ">
+            <div class="content-box-medium " align="center">
+                <div class="panel-heading">
+                    <div class="panel-title">
+                        Update Product Image
+                    </div>
+                </div>
+                   <br/>
+            
+                <img src="<%= @prod.img%>" alt="" class="img-rounded" accept="images/*" width="150px" height="150px" /> 
+                <br>
+                <br>
+                <p> 
+                    <%= f.file_field :img, :id => 'prod_img', style: 'display: none'%>
+                    <input type="button" style="margin-left:45px" value="Browse..." onclick="document.getElementById('prod_img').click();" class="btn btn-info" />
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-2">
+    </div>
+  
+</div>
+</div>  
+  <% end %>
+
+ <!-- <br/>
                 <input type="hidden" name="id" class="form-control" value=""> Name:
                 <input type="text" name="pro_name" class="form-control" value="">
                 <br/> Price:
@@ -68,51 +128,6 @@
                 <input type="text" name="spl_price" class="form-control" value="">
                 <br/> Details:
                 <textarea name="pro_info" class="form-control" rows="2"></textarea> -->
-                                                            <br/> New Arrival:
-                                                            <p class="pull-right">
-                                                                <input type="checkbox" name="new_arrival" value="1" />
-                                                                <input type="hidden" name="_token" value="{{ csrf_token() }}">
-
-                                                                <br/>
-                                                <input type="submit" class="btn btn-success pull-right" value="Update product" style="margin-top:10px" />
-                </div>
-
-            </div>
-
-    </div>
-
-</div>
-
-<div class="col-md-4" style="margin-top:25px; margin-left:-4px">
-    <!-- <?php $pId=$ Products[0]->id; $prots = DB::table('products_properties') ->where('pro_id', $pId)->get(); if(count($prots)==0) { } else {?> -->
-    <div class="panel-heading" style="height:120px; background-color:white">
-        <div class="panel-title">
-            Update Proprities
-            <!-- <input type="text" name="spl_price" class="form-control" border="none" value=""> -->
-            <a href="" class="btn btn-info pull-right" style="margin:-6px; color:#fff">Add more</a>
-        </div>
-
-        <div class="col-sm-12" style="margin-top:100px; ">
-            <div class="content-box-medium " align="center">
-                <div class="panel-heading">
-                    <div class="panel-title">
-                        Update Product Image
-                    </div>
-                </div>
-                   <br/>
-                
-                <img src="{{assets($product->img)}}" alt="" class="img-rounded" accept="image/*" width="150px" height="150px" />
-                <br>
-                <br>
-                <p><a href="{{url('/EditImage')}}/{{$product->id}}" class="btn btn-info">Change Image</a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-2">
-    </div>
-    <% end %>
-</div>
 <!--<div class="content-box-large">
 
     <table class="table table-responsive">
