update [admin][client][header] go admin/go client

--- a/app/views/share/_admin.sidebar.html.erb
+++ b/app/views/share/_admin.sidebar.html.erb
@@ -36,9 +36,9 @@
                 <!-- sidebar menu start-->
                 <ul class="sidebar-menu">
                     <li class="active">
-                    <%= link_to '<i class="icon_house_alt"></i> Dasboard'.html_safe, admin_categories_path %>
+                    <%= link_to '<i class="icon_house_alt"></i> Go Client'.html_safe, root_path %>
                     </li>
-            <li class="sub-menu">
+                    <li class="sub-menu">
                         <a href="javascript:;" class="">
                             <i class="icon_document_alt"></i>
                             <span>Products</span>
