remove product_detail from shop link

--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -115,18 +115,18 @@
                         </div>
                         <div class="mainmenu pull-left">
                             <ul class="nav navbar-nav collapse navbar-collapse">
-                                <li><a href="index.php" class="active">Home</a></li>
+                                <li><a href="/" class="active">Home</a></li>
                                 <li class="dropdown"><a href="#">Shop<i class="fa fa-angle-down"></i></a>
                                     <ul role="menu" class="sub-menu">
                                         <li><a href="products">Products</a></li>
-                                        <li><a href="product-details.html">Product Details</a></li>
+                                        <!--<li><a href="product_detail#index">Product Details</a></li>-->
                                         <li><a href="checkout">Checkout</a></li>
                                         <!--<li><a href="login.html">Login</a></li>-->
                                     </ul>
                                 </li>
                                 <li><a href="aboutus">About Us</a></li>
                                 <li>
-                                    <a href="contactus">Contact</a>
+                                    <a href="contact">Contact</a>
                                 </li>
                             </ul>
                         </div>
