--- a/app/views/product_detail/index.html.erb
+++ b/app/views/product_detail/index.html.erb
@@ -1,33 +1,34 @@
 <!--product_detail_page-->
 
 <div class="row">
+    <div class="col-sm-1"></div>
     <div class="col-sm-9 padding-right">
         <div class="product-details"><!--product-details-->
             <div class="col-sm-5">
                 <div class="view-product">
-                    <img src="images/product-details/1.jpg" alt="" />
+                    <img src="<%= @prod.img.url%>" alt="" />
                     <h3>ZOOM</h3>
                 </div>
                 <div id="similar-product" class="carousel slide" data-ride="carousel">
-                    
+
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
-                                <a href=""><img src="images/product-details/similar1.jpg" alt=""></a>
-                                <a href=""><img src="images/product-details/similar2.jpg" alt=""></a>
-                                <a href=""><img src="images/product-details/similar3.jpg" alt=""></a>
+                                <a href=""><img src="/images/product-details/similar1.jpg" alt=""></a>
+                                <a href=""><img src="/images/product-details/similar2.jpg" alt=""></a>
+                                <a href=""><img src="/images/product-details/similar3.jpg" alt=""></a>
                             </div>
                             <div class="item">
-                                <a href=""><img src="images/product-details/similar1.jpg" alt=""></a>
-                                <a href=""><img src="images/product-details/similar2.jpg" alt=""></a>
-                                <a href=""><img src="images/product-details/similar3.jpg" alt=""></a>
+                                <a href=""><img src="/images/product-details/similar1.jpg" alt=""></a>
+                                <a href=""><img src="/images/product-details/similar2.jpg" alt=""></a>
+                                <a href=""><img src="/images/product-details/similar3.jpg" alt=""></a>
                             </div>
                             <div class="item">
-                                <a href=""><img src="images/product-details/similar1.jpg" alt=""></a>
-                                <a href=""><img src="images/product-details/similar2.jpg" alt=""></a>
-                                <a href=""><img src="images/product-details/similar3.jpg" alt=""></a>
+                                <a href=""><img src="/images/product-details/similar1.jpg" alt=""></a>
+                                <a href=""><img src="/images/product-details/similar2.jpg" alt=""></a>
+                                <a href=""><img src="/images/product-details/similar3.jpg" alt=""></a>
                             </div>
-                            
+
                         </div>
 
                         <!-- Controls -->
@@ -42,12 +43,12 @@
             </div>
             <div class="col-sm-7">
                 <div class="product-information"><!--/product-information-->
-                    <img src="images/product-details/new.jpg" class="newarrival" alt="" />
+                    <img src="/images/product-details/new.jpg" class="newarrival" alt="" />
                     <h2>Anne Klein Sleeveless Colorblock Scuba</h2>
-                    <p>Web ID: 1089772</p>
-                    <img src="images/product-details/rating.png" alt="" />
+                    <p>Web ID: <%= @prod.id%></p>
+                    <img src="/images/product-details/rating.png" alt="" />
                     <span>
-                        <span>US $59</span>
+                        <span>US $<%= @prod.price%></span>
                         <label>Quantity:</label>
                         <input type="text" value="3" />
                         <button type="button" class="btn btn-fefault cart">
@@ -58,7 +59,7 @@
                     <p><b>Availability:</b> In Stock</p>
                     <p><b>Condition:</b> New</p>
                     <p><b>Brand:</b> E-SHOPPER</p>
-                    <a href=""><img src="images/product-details/share.png" class="share img-responsive"  alt="" /></a>
+                    <a href=""><img src="/images/product-details/share.png" class="share img-responsive"  alt="" /></a>
                 </div><!--/product-information-->
             </div>
         </div><!--/product-details-->
@@ -78,7 +79,7 @@
                         <div class="product-image-wrapper">
                             <div class="single-products">
                                 <div class="productinfo text-center">
-                                    <img src="images/home/gallery1.jpg" alt="" />
+                                    <img src="/images/home/gallery1.jpg" alt="" />
                                     <h2>$56</h2>
                                     <p>Easy Polo Black Edition</p>
                                     <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -90,7 +91,7 @@
                         <div class="product-image-wrapper">
                             <div class="single-products">
                                 <div class="productinfo text-center">
-                                    <img src="images/home/gallery2.jpg" alt="" />
+                                    <img src="/images/home/gallery2.jpg" alt="" />
                                     <h2>$56</h2>
                                     <p>Easy Polo Black Edition</p>
                                     <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -102,7 +103,7 @@
                         <div class="product-image-wrapper">
                             <div class="single-products">
                                 <div class="productinfo text-center">
-                                    <img src="images/home/gallery3.jpg" alt="" />
+                                    <img src="/images/home/gallery3.jpg" alt="" />
                                     <h2>$56</h2>
                                     <p>Easy Polo Black Edition</p>
                                     <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -114,7 +115,7 @@
                         <div class="product-image-wrapper">
                             <div class="single-products">
                                 <div class="productinfo text-center">
-                                    <img src="images/home/gallery4.jpg" alt="" />
+                                    <img src="/images/home/gallery4.jpg" alt="" />
                                     <h2>$56</h2>
                                     <p>Easy Polo Black Edition</p>
                                     <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -123,13 +124,13 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="tab-pane fade" id="companyprofile" >
                     <div class="col-sm-3">
                         <div class="product-image-wrapper">
                             <div class="single-products">
                                 <div class="productinfo text-center">
-                                    <img src="images/home/gallery1.jpg" alt="" />
+                                    <img src="/images/home/gallery1.jpg" alt="" />
                                     <h2>$56</h2>
                                     <p>Easy Polo Black Edition</p>
                                     <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -141,7 +142,7 @@
                         <div class="product-image-wrapper">
                             <div class="single-products">
                                 <div class="productinfo text-center">
-                                    <img src="images/home/gallery3.jpg" alt="" />
+                                    <img src="/images/home/gallery3.jpg" alt="" />
                                     <h2>$56</h2>
                                     <p>Easy Polo Black Edition</p>
                                     <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -153,7 +154,7 @@
                         <div class="product-image-wrapper">
                             <div class="single-products">
                                 <div class="productinfo text-center">
-                                    <img src="images/home/gallery2.jpg" alt="" />
+                                    <img src="/images/home/gallery2.jpg" alt="" />
                                     <h2>$56</h2>
                                     <p>Easy Polo Black Edition</p>
                                     <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -165,7 +166,7 @@
                         <div class="product-image-wrapper">
                             <div class="single-products">
                                 <div class="productinfo text-center">
-                                    <img src="images/home/gallery4.jpg" alt="" />
+                                    <img src="/images/home/gallery4.jpg" alt="" />
                                     <h2>$56</h2>
                                     <p>Easy Polo Black Edition</p>
                                     <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -174,13 +175,13 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="tab-pane fade" id="tag" >
                     <div class="col-sm-3">
                         <div class="product-image-wrapper">
                             <div class="single-products">
                                 <div class="productinfo text-center">
-                                    <img src="images/home/gallery1.jpg" alt="" />
+                                    <img src="/images/home/gallery1.jpg" alt="" />
                                     <h2>$56</h2>
                                     <p>Easy Polo Black Edition</p>
                                     <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -192,7 +193,7 @@
                         <div class="product-image-wrapper">
                             <div class="single-products">
                                 <div class="productinfo text-center">
-                                    <img src="images/home/gallery2.jpg" alt="" />
+                                    <img src="/images/home/gallery2.jpg" alt="" />
                                     <h2>$56</h2>
                                     <p>Easy Polo Black Edition</p>
                                     <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -204,7 +205,7 @@
                         <div class="product-image-wrapper">
                             <div class="single-products">
                                 <div class="productinfo text-center">
-                                    <img src="images/home/gallery3.jpg" alt="" />
+                                    <img src="/images/home/gallery3.jpg" alt="" />
                                     <h2>$56</h2>
                                     <p>Easy Polo Black Edition</p>
                                     <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -216,7 +217,7 @@
                         <div class="product-image-wrapper">
                             <div class="single-products">
                                 <div class="productinfo text-center">
-                                    <img src="images/home/gallery4.jpg" alt="" />
+                                    <img src="/images/home/gallery4.jpg" alt="" />
                                     <h2>$56</h2>
                                     <p>Easy Polo Black Edition</p>
                                     <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -225,7 +226,7 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="tab-pane fade active in" id="reviews" >
                     <div class="col-sm-12">
                         <ul>
@@ -235,21 +236,21 @@
                         </ul>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                         <p><b>Write Your Review</b></p>
-                        
+
                         <form action="#">
                             <span>
                                 <input type="text" placeholder="Your Name"/>
                                 <input type="email" placeholder="Email Address"/>
                             </span>
                             <textarea name="" ></textarea>
-                            <b>Rating: </b> <img src="images/product-details/rating.png" alt="" />
+                            <b>Rating: </b> <img src="/images/product-details/rating.png" alt="" />
                             <button type="button" class="btn btn-default pull-right">
                                 Submit
                             </button>
                         </form>
                     </div>
                 </div>
-                
+
             </div>
         </div><!--/category-tab-->
     </div>
